<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/recipeNameTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:lines="1"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="horizontal"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/opt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="?attr/colorOnPrimary"
            android:hapticFeedbackEnabled="true"
            android:shadowColor="@color/black"
            android:text="@string/options"
            android:textColor="@color/orange_d2"
            app:cornerRadius="45dp"
            app:icon="@drawable/options"
            app:iconTint="@color/orange_d2"
            app:rippleColor="?attr/colorControlHighlight"
            app:strokeColor="@color/orange_d2"
            app:strokeWidth="4dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/ingredientCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:visibility="visible"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/instructionCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@color/orange_d"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/collapseIngredients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@drawable/rippledrawable"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:scaleX="1"
                        app:srcCompat="@drawable/arrow_up"
                        app:tint="@color/design_default_color_on_primary" />

                    <TextView
                        android:id="@+id/ingredientsTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="10dp"
                        android:paddingLeft="16dp"
                        android:text="@string/ingredients"
                        android:textColor="@color/material_on_primary_emphasis_high_type"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ListView
                    android:id="@+id/ingredientListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:divider="@android:drawable/divider_horizontal_dim_dark"
                    android:dividerHeight="10dp"
                    android:fadeScrollbars="true"
                    android:footerDividersEnabled="false"
                    android:headerDividersEnabled="false"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp"
                    android:scrollbarSize="4dp"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbarThumbVertical="?attr/colorPrimary"
                    android:scrollbars="vertical"
                    android:scrollingCache="false"
                    android:smoothScrollbar="true"
                    android:verticalScrollbarPosition="right"
                    android:visibility="visible"
                    tools:listitem="@layout/ingredient_item" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/instructionCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@color/orange_d"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/collapseSteps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@drawable/rippledrawable"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:scaleX="1"
                        android:scaleY="1"
                        app:srcCompat="@drawable/arrow_up"
                        app:tint="@color/design_default_color_on_primary" />

                    <TextView
                        android:id="@+id/stepsTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="10dp"
                        android:paddingLeft="16dp"
                        android:text="@string/steps"
                        android:textColor="@color/material_on_primary_emphasis_high_type"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ListView
                    android:id="@+id/instructionListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:divider="@android:drawable/divider_horizontal_dim_dark"
                    android:dividerHeight="10dp"
                    android:fadeScrollbars="true"
                    android:footerDividersEnabled="false"
                    android:headerDividersEnabled="false"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp"
                    android:scrollbarSize="4dp"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbarThumbVertical="?attr/colorPrimary"
                    android:scrollbars="vertical"
                    android:scrollingCache="false"
                    android:smoothScrollbar="true"
                    android:verticalScrollbarPosition="right"
                    android:visibility="visible"
                    tools:listitem="@layout/instruction_item" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>