<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    style="@style/Theme.HCI_Project"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/orange_d">

        <ImageButton
            android:id="@+id/editRecipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/ic_launcher_background"
            app:tint="@color/orange_d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/horizontalScrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/edit" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:scrollbarStyle="outsideInset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/opt_button"
            app:layout_constraintStart_toEndOf="@+id/editRecipeName"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/recipeNameTXT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:ellipsize="marquee"
                android:focusable="false"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="Recipe name goes here"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </HorizontalScrollView>

        <Button
            android:id="@+id/opt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="0"
            android:backgroundTint="?attr/colorOnPrimary"
            android:hapticFeedbackEnabled="true"
            android:shadowColor="@color/black"
            android:text="@string/options"
            android:textColor="@color/orange_d2"
            app:cornerRadius="45dp"
            app:icon="@drawable/options"
            app:iconTint="@color/orange_d2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/horizontalScrollView"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="?attr/colorControlHighlight"
            app:strokeColor="@color/orange_d2"
            app:strokeWidth="4dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/ingredientCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:visibility="visible"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/addIngredientButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@color/orange_d"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/collapseIngredients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@drawable/rippledrawable"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:scaleX="1"
                        app:srcCompat="@drawable/arrow_up"
                        app:tint="@color/design_default_color_on_primary" />

                    <TextView
                        android:id="@+id/ingredientsTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="10dp"
                        android:paddingLeft="16dp"
                        android:text="@string/ingredients"
                        android:textColor="@color/material_on_primary_emphasis_high_type"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredientRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="0"
            android:text="Add Ingredient"
            app:icon="@drawable/add"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/instructionCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientCard" />

        <androidx.cardview.widget.CardView
            android:id="@+id/instructionCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/addInstructionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@color/orange_d"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/collapseSteps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@drawable/rippledrawable"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:scaleX="1"
                        android:scaleY="1"
                        app:srcCompat="@drawable/arrow_up"
                        app:tint="@color/design_default_color_on_primary" />

                    <TextView
                        android:id="@+id/stepsTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="10dp"
                        android:paddingLeft="16dp"
                        android:text="@string/steps"
                        android:textColor="@color/material_on_primary_emphasis_high_type"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/instructionRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp"
                    tools:listitem="@layout/instruction_item" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addInstructionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="ADD INSTRUCTION"
            app:icon="@drawable/add"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>